--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">PIP_Demo</string>
     <string name="todo">TODO</string>
+    <string name="cancelbtn">cancelBtn</string>
 </resources>
